RESOLVED FIXED50252
[GTK] Fix compilation warnings reported by clang
https://bugs.webkit.org/show_bug.cgi?id=50252
Summary [GTK] Fix compilation warnings reported by clang
Alejandro G. Castro
Reported 2010-11-30 11:04:33 PST
Running with clang outputs some warnings, there are still other issues that avoid the compilation that we will probably have to fix before in other projects to have the complete support.
Attachments
Proposed patch (4.62 KB, patch)
2010-11-30 12:01 PST, Alejandro G. Castro
xan.lopez: review+
Alejandro G. Castro
Comment 1 2010-11-30 12:01:22 PST
Created attachment 75179 [details] Proposed patch
WebKit Review Bot
Comment 2 2010-11-30 12:03:10 PST
Attachment 75179 [details] did not pass style-queue: Failed to run "['WebKitTools/Scripts/check-webkit-style', '--diff-files', u'WebCore/ChangeLog', u'WebCore/platform/graphics/Path.h', u'WebCore/platform/network/soup/ResourceHandleSoup.cpp', u'WebKitTools/ChangeLog', u'WebKitTools/GtkLauncher/main.c']" exit_code: 1 WebKitTools/GtkLauncher/main.c:221: Extra space before ( in function call [whitespace/parens] [4] Total errors found: 1 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
Alejandro G. Castro
Comment 3 2010-11-30 12:07:17 PST
(In reply to comment #2) > Attachment 75179 [details] did not pass style-queue: > > Failed to run "['WebKitTools/Scripts/check-webkit-style', '--diff-files', u'WebCore/ChangeLog', u'WebCore/platform/graphics/Path.h', u'WebCore/platform/network/soup/ResourceHandleSoup.cpp', u'WebKitTools/ChangeLog', u'WebKitTools/GtkLauncher/main.c']" exit_code: 1 > WebKitTools/GtkLauncher/main.c:221: Extra space before ( in function call [whitespace/parens] [4] > Total errors found: 1 in 5 files > False positive, that file has gtk style, not sure if we should change that at some point.
Xan Lopez
Comment 4 2010-11-30 12:10:24 PST
Comment on attachment 75179 [details] Proposed patch Should either make GtkLauncher follow WebKit style or make an exception in the script. My vote goes for the former.
Alejandro G. Castro
Comment 5 2010-11-30 12:15:49 PST
(In reply to comment #4) > (From update of attachment 75179 [details]) > Should either make GtkLauncher follow WebKit style or make an exception in the script. My vote goes for the former. I agree, I'll upload another bug for that.
Alejandro G. Castro
Comment 6 2010-12-05 11:22:28 PST
Note You need to log in before you can comment on or make changes to this bug.