2010-12-05  Alejandro G. Castro  <alex@igalia.com>

Reviewed by Xan Lopez.

        [GTK] Fix compilation warnings reported by clang
        https://bugs.webkit.org/show_bug.cgi?id=50252

        * platform/graphics/Path.h: CairoPath is now a class, not a
        struct.
        * platform/network/soup/ResourceHandleSoup.cpp:
        (WebCore::sendRequestCallback): Cast the status_code to int.

2010-12-05  Alejandro G. Castro  <alex@igalia.com>

        Reviewed by Xan Lopez.

        [GTK] Fix compilation warnings reported by clang
        https://bugs.webkit.org/show_bug.cgi?id=50252

        * GtkLauncher/main.c:
        (create_window): The create_statusbar function does not have
        parameters.

Canonical link: https://commits.webkit.org/63766@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@73344 268f45cc-cd09-0410-ab3c-d52691b4dbfc